--- a/configs/cisco_config.conf
+++ b/configs/cisco_config.conf
@@ -1,13 +1,23 @@
-# Cisco router connection settings
+# Configuration file for Cisco router connection settings
+# This file contains credentials and paths for router access
+#
+# Variables:
+# CISCO_HOST - IP address of the router
+# CISCO_USERNAME - SSH username for router access
+# CISCO_PASSWORD - SSH password for router access
+# CISCO_DEVICE_TYPE - Type of Cisco device (used by Scrapli library)
+# SCP_DESTINATION - Path on router where to upload commands
+# INPUT_IP_LIST - Source file with IP addresses to block
+# OUTPUT_COMMANDS_FILE - Generated Cisco commands file
+
+# Cisco router settings
 CISCO_HOST=XXX.XXX.XXX.XXX
 CISCO_USERNAME=trigger
 CISCO_PASSWORD=strong_password
 CISCO_DEVICE_TYPE=cisco_ios
+SCP_DESTINATION=bootflash:/cisco_commands.txt
 
-# FTP server settings
-FTP_SERVER=XXX.XXX.XXX.XXX
-FTP_PATH=/upload/cisco_commands.txt
 
-# Files settings
+# File settings
 INPUT_IP_LIST=ip_list.txt
-OUTPUT_COMMANDS_FILE=cisco_commands.txt 
+OUTPUT_COMMANDS_FILE=cisco_commands.txt
