--- a/configs/exclude_networks.conf
+++ b/configs/exclude_networks.conf
@@ -1,12 +1,21 @@
+# Configuration file for IP address exclusions
+# Contains networks that should never be blocked
+# Format: one CIDR per line (e.g. 192.168.0.0/16)
+# Lines starting with # are ignored (comments)
+#
+# WARNING: Be careful when editing this file
+# Removing critical networks may cause loss of connectivity
+
 # LAN networks and multicast
-10.0.0.0
-192.168.0.0
-172.16.0.0
-127.0.0.0
-224.0.0.0
+10.0.0.0/8
+192.168.0.0/16
+172.16.0.0/12
+127.0.0.0/8
+
+# Multicast
+224.0.0.0/3
 
 # Trusted IPs
+8.8.8.8/32
+1.1.1.1/32
 
-# Temporarily excluded IPs
-#8.8.8.8
-#1.1.1.1 
