--- a/configs/ip_lists.conf
+++ b/configs/ip_lists.conf
@@ -1,7 +1,12 @@
+# Configuration file for IP blocklists sources
+# Contains URLs of IP reputation lists that will be downloaded and processed
+# Lines starting with # are ignored (commented out)
+# Each active line should contain a direct URL to a blocklist file
+
 # Active lists
 https://iplists.firehol.org/files/firehol_level1.netset
 https://iplists.firehol.org/files/firehol_level2.netset
+# Do not enable level3 - blocks GitHub and has many false positives
+#https://iplists.firehol.org/files/firehol_level3.netset
 https://feodotracker.abuse.ch/downloads/ipblocklist_recommended.txt
 
-# Disabled lists
-#https://raw.githubusercontent.com/firehol/blocklist-ipsets/master/firehol_level3.netset
