--- a/configs/cisco_config.conf
+++ b/configs/cisco_config.conf
@@ -11,13 +11,14 @@
 # OUTPUT_COMMANDS_FILE - Generated Cisco commands file
 
 # Cisco router settings
-CISCO_HOST=XXX.XXX.XXX.XXX
+#CISCO_HOST=10.128.21.10
+CISCO_HOST=10.196.37.5
 CISCO_USERNAME=trigger
-CISCO_PASSWORD=strong_password
+CISCO_PASSWORD=ijhdfhj34789y34ihuodf$21
 CISCO_DEVICE_TYPE=cisco_ios
 SCP_DESTINATION=bootflash:/cisco_commands.txt
 
 
 # File settings
 INPUT_IP_LIST=ip_list.txt
-OUTPUT_COMMANDS_FILE=cisco_commands.txt
+OUTPUT_COMMANDS_FILE=cisco_commands.txt 
